POWR-228 Add guide and information content type to all group types.

--- a/web/sites/default/config/block.block.stormy_views_block__group_content_menu.yml
+++ b/web/sites/default/config/block.block.stormy_views_block__group_content_menu.yml
@@ -27,8 +27,10 @@ visibility:
   'entity_bundle:group':
     id: 'entity_bundle:group'
     bundles:
+      elected_official: elected_official
       bureau_office: bureau_office
       program: program
+      project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
