--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -22,12 +22,30 @@ permissions:
   7: 'leave group'
   8: 'view group_membership content'
   9: 'access group_node overview'
-  20: 'create group_node:news entity'
-  21: 'delete any group_node:news entity'
-  22: 'delete own group_node:news entity'
-  23: 'update any group_node:news entity'
-  24: 'update own group_node:news entity'
-  25: 'view group_node:news entity'
-  26: 'view unpublished group_node:news entity'
-  27: 'create group_node:news content'
-  28: 'view group_node:news content'
+  10: 'create group_node:news entity'
+  11: 'delete any group_node:news entity'
+  12: 'delete own group_node:news entity'
+  13: 'update any group_node:news entity'
+  14: 'update own group_node:news entity'
+  15: 'view group_node:news entity'
+  16: 'view unpublished group_node:news entity'
+  17: 'create group_node:news content'
+  18: 'view group_node:news content'
+  29: 'create group_node:guide entity'
+  30: 'delete any group_node:guide entity'
+  31: 'delete own group_node:guide entity'
+  32: 'update any group_node:guide entity'
+  33: 'update own group_node:guide entity'
+  34: 'view group_node:guide entity'
+  35: 'view unpublished group_node:guide entity'
+  36: 'create group_node:guide content'
+  37: 'view group_node:guide content'
+  38: 'create group_node:information entity'
+  39: 'delete any group_node:information entity'
+  40: 'delete own group_node:information entity'
+  41: 'update any group_node:information entity'
+  42: 'update own group_node:information entity'
+  43: 'view group_node:information entity'
+  44: 'view unpublished group_node:information entity'
+  45: 'create group_node:information content'
+  46: 'view group_node:information content'
