--- a/web/sites/default/config/group.role.elected_official-anonymous.yml
+++ b/web/sites/default/config/group.role.elected_official-anonymous.yml
@@ -13,4 +13,6 @@ group_type: elected_official
 permissions_ui: true
 permissions:
   0: 'view group'
-  2: 'view group_node:news entity'
+  1: 'view group_node:news entity'
+  3: 'view group_node:guide entity'
+  4: 'view group_node:information entity'
