--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -15,10 +15,24 @@ permissions:
   0: 'view group'
   1: 'leave group'
   2: 'access group_node overview'
-  6: 'create group_node:news entity'
-  7: 'delete any group_node:news entity'
-  8: 'delete own group_node:news entity'
-  9: 'update any group_node:news entity'
-  10: 'update own group_node:news entity'
-  11: 'view group_node:news entity'
-  12: 'view unpublished group_node:news entity'
+  3: 'create group_node:news entity'
+  4: 'delete any group_node:news entity'
+  5: 'delete own group_node:news entity'
+  6: 'update any group_node:news entity'
+  7: 'update own group_node:news entity'
+  8: 'view group_node:news entity'
+  9: 'view unpublished group_node:news entity'
+  13: 'create group_node:guide entity'
+  14: 'delete any group_node:guide entity'
+  15: 'delete own group_node:guide entity'
+  16: 'update any group_node:guide entity'
+  17: 'update own group_node:guide entity'
+  18: 'view group_node:guide entity'
+  19: 'view unpublished group_node:guide entity'
+  20: 'create group_node:information entity'
+  21: 'delete any group_node:information entity'
+  22: 'delete own group_node:information entity'
+  23: 'update any group_node:information entity'
+  24: 'update own group_node:information entity'
+  25: 'view group_node:information entity'
+  26: 'view unpublished group_node:information entity'
