--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -22,10 +22,24 @@ permissions:
   7: 'view group_node:city_service entity'
   8: 'view unpublished group_node:city_service entity'
   9: 'delete any group_node:city_service entity'
-  13: 'create group_node:news entity'
-  14: 'delete any group_node:news entity'
-  15: 'delete own group_node:news entity'
-  16: 'update any group_node:news entity'
-  17: 'update own group_node:news entity'
-  18: 'view group_node:news entity'
-  19: 'view unpublished group_node:news entity'
+  10: 'create group_node:news entity'
+  11: 'delete any group_node:news entity'
+  12: 'delete own group_node:news entity'
+  13: 'update any group_node:news entity'
+  14: 'update own group_node:news entity'
+  15: 'view group_node:news entity'
+  16: 'view unpublished group_node:news entity'
+  17: 'create group_node:guide entity'
+  18: 'delete any group_node:guide entity'
+  19: 'delete own group_node:guide entity'
+  20: 'update any group_node:guide entity'
+  21: 'update own group_node:guide entity'
+  22: 'view group_node:guide entity'
+  23: 'view unpublished group_node:guide entity'
+  34: 'create group_node:information entity'
+  35: 'delete any group_node:information entity'
+  36: 'delete own group_node:information entity'
+  37: 'update any group_node:information entity'
+  38: 'update own group_node:information entity'
+  39: 'view group_node:information entity'
+  40: 'view unpublished group_node:information entity'
