--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -22,21 +22,39 @@ permissions:
   7: 'leave group'
   8: 'view group_membership content'
   9: 'access group_node overview'
-  20: 'create group_node:news entity'
-  21: 'delete any group_node:news entity'
-  22: 'delete own group_node:news entity'
-  23: 'update any group_node:news entity'
-  24: 'update own group_node:news entity'
-  25: 'view group_node:news entity'
-  26: 'view unpublished group_node:news entity'
-  27: 'create group_node:news content'
-  28: 'view group_node:news content'
-  29: 'create group_node:city_service entity'
-  30: 'delete any group_node:city_service entity'
-  31: 'delete own group_node:city_service entity'
-  32: 'update any group_node:city_service entity'
-  33: 'update own group_node:city_service entity'
-  34: 'view group_node:city_service entity'
-  35: 'view unpublished group_node:city_service entity'
-  36: 'create group_node:city_service content'
-  37: 'view group_node:city_service content'
+  10: 'create group_node:news entity'
+  11: 'delete any group_node:news entity'
+  12: 'delete own group_node:news entity'
+  13: 'update any group_node:news entity'
+  14: 'update own group_node:news entity'
+  15: 'view group_node:news entity'
+  16: 'view unpublished group_node:news entity'
+  17: 'create group_node:news content'
+  18: 'view group_node:news content'
+  19: 'create group_node:city_service entity'
+  20: 'delete any group_node:city_service entity'
+  21: 'delete own group_node:city_service entity'
+  22: 'update any group_node:city_service entity'
+  23: 'update own group_node:city_service entity'
+  24: 'view group_node:city_service entity'
+  25: 'view unpublished group_node:city_service entity'
+  26: 'create group_node:city_service content'
+  27: 'view group_node:city_service content'
+  38: 'create group_node:guide entity'
+  39: 'delete any group_node:guide entity'
+  40: 'delete own group_node:guide entity'
+  41: 'update any group_node:guide entity'
+  42: 'update own group_node:guide entity'
+  43: 'view group_node:guide entity'
+  44: 'view unpublished group_node:guide entity'
+  45: 'create group_node:guide content'
+  46: 'view group_node:guide content'
+  47: 'create group_node:information entity'
+  48: 'delete any group_node:information entity'
+  49: 'delete own group_node:information entity'
+  50: 'update any group_node:information entity'
+  51: 'update own group_node:information entity'
+  52: 'view group_node:information entity'
+  53: 'view unpublished group_node:information entity'
+  54: 'create group_node:information content'
+  55: 'view group_node:information content'
