--- a/web/sites/default/config/group.role.project-anonymous.yml
+++ b/web/sites/default/config/group.role.project-anonymous.yml
@@ -13,5 +13,7 @@ group_type: project
 permissions_ui: true
 permissions:
   0: 'view group'
-  2: 'view group_node:news entity'
-  3: 'view group_node:city_service entity'
+  1: 'view group_node:news entity'
+  2: 'view group_node:city_service entity'
+  4: 'view group_node:guide entity'
+  5: 'view group_node:information entity'
