--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -14,17 +14,31 @@ permissions_ui: true
 permissions:
   0: 'view group'
   1: 'leave group'
-  4: 'create group_node:news entity'
-  5: 'delete any group_node:news entity'
-  6: 'delete own group_node:news entity'
-  7: 'update any group_node:news entity'
-  8: 'update own group_node:news entity'
-  9: 'view group_node:news entity'
-  10: 'view unpublished group_node:news entity'
-  11: 'create group_node:city_service entity'
-  12: 'delete any group_node:city_service entity'
-  13: 'delete own group_node:city_service entity'
-  14: 'update any group_node:city_service entity'
-  15: 'update own group_node:city_service entity'
-  16: 'view group_node:city_service entity'
-  17: 'view unpublished group_node:city_service entity'
+  2: 'create group_node:news entity'
+  3: 'delete any group_node:news entity'
+  4: 'delete own group_node:news entity'
+  5: 'update any group_node:news entity'
+  6: 'update own group_node:news entity'
+  7: 'view group_node:news entity'
+  8: 'view unpublished group_node:news entity'
+  9: 'create group_node:city_service entity'
+  10: 'delete any group_node:city_service entity'
+  11: 'delete own group_node:city_service entity'
+  12: 'update any group_node:city_service entity'
+  13: 'update own group_node:city_service entity'
+  14: 'view group_node:city_service entity'
+  15: 'view unpublished group_node:city_service entity'
+  18: 'create group_node:guide entity'
+  19: 'delete any group_node:guide entity'
+  20: 'delete own group_node:guide entity'
+  21: 'update any group_node:guide entity'
+  22: 'update own group_node:guide entity'
+  23: 'view group_node:guide entity'
+  24: 'view unpublished group_node:guide entity'
+  25: 'create group_node:information entity'
+  26: 'delete any group_node:information entity'
+  27: 'delete own group_node:information entity'
+  28: 'update any group_node:information entity'
+  29: 'update own group_node:information entity'
+  30: 'view group_node:information entity'
+  31: 'view unpublished group_node:information entity'
