--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_shortname_or_acronym
+    - node.type.city_service
+    - node.type.guide
+    - node.type.news
   module:
     - group
     - node
@@ -279,7 +282,50 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
-      filters: {  }
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            guide: guide
+            news: news
+            city_service: city_service
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts: {  }
       header: {  }
       footer: {  }
