--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -28,22 +28,30 @@ permissions:
   13: 'view unpublished group_node:city_service entity'
   14: 'create group_node:city_service content'
   15: 'view group_node:city_service content'
-  23: 'create group_node:news entity'
-  24: 'delete any group_node:news entity'
-  25: 'delete own group_node:news entity'
-  26: 'update any group_node:news entity'
-  27: 'update own group_node:news entity'
-  28: 'view group_node:news entity'
-  29: 'view unpublished group_node:news entity'
-  30: 'create group_node:news content'
-  31: 'view group_node:news content'
-  32: 'create group_node:guide entity'
-  33: 'delete any group_node:guide entity'
-  34: 'delete own group_node:guide entity'
-  35: 'update any group_node:guide entity'
-  36: 'update own group_node:guide entity'
-  37: 'view group_node:guide entity'
-  38: 'view unpublished group_node:guide entity'
-  39: 'create group_node:guide content'
-  41: 'view group_node:guide content'
-  
+  16: 'create group_node:news entity'
+  17: 'delete any group_node:news entity'
+  18: 'delete own group_node:news entity'
+  19: 'update any group_node:news entity'
+  20: 'update own group_node:news entity'
+  21: 'view group_node:news entity'
+  22: 'view unpublished group_node:news entity'
+  23: 'create group_node:news content'
+  24: 'view group_node:news content'
+  25: 'create group_node:guide entity'
+  26: 'delete any group_node:guide entity'
+  27: 'delete own group_node:guide entity'
+  28: 'update any group_node:guide entity'
+  29: 'update own group_node:guide entity'
+  30: 'view group_node:guide entity'
+  31: 'view unpublished group_node:guide entity'
+  32: 'create group_node:guide content'
+  33: 'view group_node:guide content'
+  50: 'create group_node:information entity'
+  51: 'delete any group_node:information entity'
+  52: 'delete own group_node:information entity'
+  53: 'update any group_node:information entity'
+  54: 'update own group_node:information entity'
+  55: 'view group_node:information entity'
+  56: 'view unpublished group_node:information entity'
+  57: 'create group_node:information content'
+  58: 'view group_node:information content'
