--- a/web/sites/default/config/group.role.bureau_office-outsider.yml
+++ b/web/sites/default/config/group.role.bureau_office-outsider.yml
@@ -16,3 +16,4 @@ permissions:
   1: 'view group_node:city_service entity'
   2: 'view group_node:news entity'
   3: 'view group_node:guide entity'
+  6: 'view group_node:information entity'
