--- a/web/sites/default/config/group.role.program-outsider.yml
+++ b/web/sites/default/config/group.role.program-outsider.yml
@@ -14,4 +14,6 @@ permissions_ui: true
 permissions:
   0: 'view group'
   1: 'view group_node:city_service entity'
-  3: 'view group_node:news entity'
+  2: 'view group_node:news entity'
+  3: 'view group_node:guide entity'
+  6: 'view group_node:information entity'
