POWR-214 Changed pointer to css file for pattern lab

--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -46,7 +46,7 @@
     "webpagetest": "^0.3.4"
   },
   "scripts": {
-    "start": "gulp css",
+    "start": "gulp watch:css",
     "pl:start": "composer start",
     "pl:install": "composer install",
     "pl:upgrade": "composer update",
