Fix script error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,7 @@ behat_tests: &behat_tests
               do
                 if (terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y;) then 
                   terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr;
+                  break;
                 else
                   echo 'Wait for 10 seconds';
                   sleep 10s;
