--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ behat_tests: &behat_tests
     - run:
         name: Composer install
         command: |
+          exit 1
           # Pantheon don't allow these folders but Composer needs them
           #rm -rf ./vendor/drupal/coder
           rm -rf ./web/modules/contrib/facets
@@ -161,6 +162,7 @@ behat_tests: &behat_tests
                 else
                   echo 'Wait for 10 seconds';
                   sleep 10s;
+                  exit 1;
                 fi
               done
             fi
