Fix syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ behat_tests: &behat_tests
                 sleep 10s;
               fi
             done
-            if ((count != -1)) then exit 1; fi
+            if ((count != -1)); then exit 1; fi
             # terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
