--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,17 +155,17 @@ behat_tests: &behat_tests
               terminus env:wake portlandor.$CIRCLE_BRANCH # && sleep 60s
             fi
             # Clear cache. Import config files
-            count = 0
+            count=0
             for i in {1..10}
             do
               if (terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y;) then 
                 terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr;
-                count = -1
+                count=-1
                 break;
               else
-                echo 'Wait for 10 seconds';
+                echo 'Wait for 10 seconds before retry...'
                 count++
-                sleep 10s;
+                sleep 10s
               fi
             done
             if ((count != -1)); then exit 1; fi
