POWR-156-2 Bureau directory facets and search

--- a/web/sites/default/config/block.block.bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.bureausandofficesbytopic.yml
@@ -1,28 +1,28 @@
-uuid: 8fcb9ffa-c966-4918-8408-041f5d78224a
+uuid: 5fdbdce7-e34f-4bb9-9743-72bd18fbe770
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.services_by_topic
+    - facets.facet.bureaus_by_topic
   module:
     - facets
     - system
   theme:
     - stormy
-id: stormy_services_by_topic
+id: bureausandofficesbytopic
 theme: stormy
 region: sidebar_first
-weight: -8
+weight: -6
 provider: null
-plugin: 'facet_block:services_by_topic'
+plugin: 'facet_block:bureaus_by_topic'
 settings:
-  id: 'facet_block:services_by_topic'
-  label: 'Services by topic'
+  id: 'facet_block:bureaus_by_topic'
+  label: 'Bureaus and offices by topic'
   provider: facets
   label_display: visible
 visibility:
   request_path:
     id: request_path
-    pages: /services
+    pages: /bureaus-offices
     negate: false
     context_mapping: {  }
