--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -13,7 +13,7 @@ dependencies:
     - node
 id: services
 name: Services
-description: ''
+description: 'Index of the service content type.'
 read_only: false
 field_settings:
   rendered_item:
@@ -71,9 +71,9 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
-  rendered_item: {  }
   add_url: {  }
   aggregated_field: {  }
+  rendered_item: {  }
 tracker_settings:
   default:
     indexing_order: fifo
