--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -165,7 +165,7 @@ display:
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: fulltext
+            identifier: search
             required: false
             remember: false
             multiple: false
@@ -230,7 +230,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total services'
+          content: 'Displaying @start - @end of @total matching services'
           plugin_id: result
       footer: {  }
       empty: {  }
