--- a/web/sites/default/config/facets.facet.bureaus_by_topic.yml
+++ b/web/sites/default/config/facets.facet.bureaus_by_topic.yml
@@ -1,20 +1,20 @@
-uuid: 072fe0e5-5563-441b-9015-850ec32c8cdc
+uuid: 6ecec58b-c40d-4bc8-98f4-552f6e932cfc
 langcode: en
 status: true
 dependencies:
   config:
-    - search_api.index.services
-    - views.view.services_index
+    - search_api.index.bureaus
+    - views.view.bureaus_and_offices
   module:
     - search_api
-id: services_by_audience
-name: 'Services by audience'
-url_alias: services_by_audience
+id: bureaus_by_topic
+name: 'Bureaus and offices by topic'
+url_alias: bureaus_by_topic
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: name_audience
-facet_source_id: 'search_api:views_page__services_index__page_1'
+field_identifier: name_topics
+facet_source_id: 'search_api:views_page__bureaus_and_offices__page_1'
 widget:
   type: links
   config:
