--- a/web/sites/default/config/facets.facet.services_by_action.yml
+++ b/web/sites/default/config/facets.facet.services_by_action.yml
@@ -23,7 +23,7 @@ widget:
     soft_limit_settings:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
-query_operator: or
+query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
