--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -1,19 +1,19 @@
-uuid: 8774c496-6ea0-47e5-9681-5af393255743
+uuid: 3ccd24ba-d9a4-4ffd-9f88-61f4c71bb1ba
 langcode: en
-status: false
+status: true
 dependencies:
   config:
-    - group.type.bureau_office
+    - search_api.index.bureaus
     - system.menu.main
   module:
-    - group
-id: bureaus_offices_list
-label: 'Bureaus and offices list'
+    - search_api
+id: bureaus_and_offices
+label: 'Bureaus and offices index'
 module: views
 description: ''
 tag: ''
-base_table: groups_field_data
-base_field: id
+base_table: search_api_index_bureaus
+base_field: search_api_id
 core: 8.x
 display:
   default:
@@ -26,24 +26,25 @@ display:
         type: none
         options: {  }
       cache:
-        type: tag
-        options: {  }
+        type: search_api_time
+        options:
+          results_lifespan: 3600
+          results_lifespan_custom: 0
+          output_lifespan: 3600
+          output_lifespan_custom: 0
       query:
         type: views_query
         options:
-          disable_sql_rewrite: false
-          distinct: false
-          replica: false
-          query_comment: ''
-          query_tags: {  }
+          bypass_access: false
+          skip_access: false
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
-          reset_button: false
+          submit_button: Search
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
+          expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
@@ -72,16 +73,16 @@ display:
         options:
           grouping: {  }
           row_class: list-group-item
-          default_row_class: false
+          default_row_class: true
           type: ul
-          wrapper_class: 'container col-12'
-          class: list-group
+          wrapper_class: container
+          class: 'list-group col-12'
       row:
         type: fields
       fields:
         label:
           id: label
-          table: groups_field_data
+          table: search_api_datasource_bureaus_entity_group
           field: label
           relationship: none
           group_type: group
@@ -141,24 +142,66 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: null
-          entity_field: label
-          plugin_id: field
-      filters:
-        type:
-          id: type
-          table: groups_field_data
-          field: type
-          value:
-            bureau_office: bureau_office
+          field_rendering: true
+          fallback_handler: search_api
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
           entity_type: group
-          entity_field: type
-          plugin_id: bundle
+          plugin_id: search_api_field
+      filters:
+        search_api_fulltext:
+          id: search_api_fulltext
+          table: search_api_index_bureaus
+          field: search_api_fulltext
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: and
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: search_api_fulltext_op
+            label: ''
+            description: ''
+            use_operator: false
+            operator: search_api_fulltext_op
+            identifier: search
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              layout_manager: '0'
+              media_creator: '0'
+              media_manager: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          parse_mode: terms
+          min_length: null
+          fields: {  }
+          plugin_id: search_api_fulltext
       sorts:
-        label:
-          id: label
-          table: groups_field_data
-          field: label
+        title:
+          id: title
+          table: search_api_index_bureaus
+          field: title
           relationship: none
           group_type: group
           admin_label: ''
@@ -166,11 +209,22 @@ display:
           exposed: false
           expose:
             label: ''
-          entity_type: group
-          entity_field: label
-          plugin_id: standard
+          plugin_id: search_api
       title: 'Bureaus and offices'
       header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: '<p>Browse or search through the bureaus and offices in the City of Portland, Oregon.</p>'
+            format: simple_editor
+          plugin_id: text
         result:
           id: result
           table: views
@@ -179,18 +233,20 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total bureaus and offices at the City of Portland, Oregon.'
+          content: 'Displaying @start - @end of @total matching bureaus and offices'
           plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
   page_1:
@@ -205,11 +261,15 @@ display:
         type: normal
         title: 'Bureaus and offices'
         menu_name: main
-        weight: -49
+      cache:
+        type: none
+      defaults:
+        cache: false
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
