POWR-214 Added a different command for starting pattern lab to limit timeouts

--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "gulp watch:css",
-    "pl:start": "composer start",
+    "pl:start": "composer run start --timeout=0",
     "pl:install": "composer install",
     "pl:upgrade": "composer update",
     "pl:generate": "composer generate",
