POWR-214 Modified libraries and gulpfile to help produce a starterkit

--- a/web/themes/custom/rain/rain.libraries.yml
+++ b/web/themes/custom/rain/rain.libraries.yml
@@ -1,14 +1,4 @@
 global:
   css:
     theme:
-      dist/style.css: {}
-
-main_menu:
-  js:
-    dist/02-molecules/menus/main-menu/main-menu.js: {}
-  dependencies:
-    - core/drupal
-
-sprite:
-  js:
-    components/js/svgxuse.min.js: { attributes: { defer: true } }
+      source/css/style.css: {}
