POWR-231 fix news moderation, information default text, remove perm to scheduler

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -50,6 +50,8 @@ content:
     region: content
     settings:
       display_label: true
+    weight: 6
+    region: content
     third_party_settings: {  }
   title:
     type: string_textfield
