POWR-231 fix news moderation, information default text, remove perm to scheduler

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - node.type.information
   module:
     - content_moderation
-    - datetime
     - paragraphs
     - path
 id: node.information.default
@@ -30,7 +29,7 @@ content:
       edit_mode: preview
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: _none
+      default_paragraph_type: simple_text
     third_party_settings: {  }
     region: content
   moderation_state:
