--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -6,7 +6,9 @@ dependencies:
     - field.field.node.news.field_body
     - node.type.news
   module:
+    - content_moderation
     - paragraphs
+    - path
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -30,11 +32,23 @@ content:
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  path:
+    type: path
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
@@ -54,9 +68,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  url_redirects:
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
-  moderation_state: true
-  path: true
   promote: true
   sticky: true
-  url_redirects: true
