POWR-234 Add description to information content type.

--- a/web/sites/default/config/node.type.information.yml
+++ b/web/sites/default/config/node.type.information.yml
@@ -10,8 +10,8 @@ third_party_settings:
     parent: ''
 name: Information
 type: information
-description: ''
+description: 'Information is a basic page of content included in a bureau/office, elected official site, or program/project website. Consider using a guide if the content includes step by step instructions or needs a table of contents.'
 help: ''
-new_revision: false
+new_revision: true
 preview_mode: 1
 display_submitted: false
