--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -297,7 +297,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ arguments.gid|placeholder }} services'
+          title: '{{ arguments.gid|placeholder }} news'
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
