POWR-244 Update the description for group news view.

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -12,7 +12,7 @@ dependencies:
 id: group_news
 label: 'Group news'
 module: views
-description: 'A set of views to help show services that are related to a group.'
+description: 'A set of views to help show news that are related to a group.'
 tag: ''
 base_table: node_field_data
 base_field: nid
