POWR-230 Made fax number use the Cleave client-side vlaidation

--- a/web/sites/default/config/core.entity_form_display.paragraph.fax_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.fax_button.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.paragraph.fax_button.field_fax_number
     - paragraphs.paragraphs_type.fax_button
   module:
-    - telephone
+    - cleave
 id: paragraph.fax_button.default
 targetEntityType: paragraph
 bundle: fax_button
@@ -16,8 +16,9 @@ content:
     weight: 0
     settings:
       placeholder: ''
+      country: US
     third_party_settings: {  }
-    type: telephone_default
+    type: telephone_cleave
     region: content
 hidden:
   created: true
