--- a/web/sites/default/config/field.field.paragraph.fax_button.field_fax_number.yml
+++ b/web/sites/default/config/field.field.paragraph.fax_button.field_fax_number.yml
@@ -6,11 +6,17 @@ dependencies:
     - field.storage.paragraph.field_fax_number
     - paragraphs.paragraphs_type.fax_button
   module:
+    - custom_add_another
     - telephone
+    - telephone_validation
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
+  telephone_validation:
+    format: 2
+    country:
+      - US
 id: paragraph.fax_button.field_fax_number
 field_name: field_fax_number
 entity_type: paragraph
