--- a/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
+++ b/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
@@ -22,7 +22,7 @@ field_name: field_phone_number
 entity_type: paragraph
 bundle: telephone_button
 label: 'Phone number'
-description: 'Enter the phone number as a 10 digit number with hyphens. (e.g. 503-555-1234) It will be clickable on mobile devices.'
+description: 'Enter the phone number as a 10 digit number. (e.g. 503 555 1234) It will be clickable on mobile devices.'
 required: true
 translatable: false
 default_value: {  }
