--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -3,49 +3,62 @@
   "description": "Project template for Drupal 8 themes",
   "version": "1.0.0",
   "devDependencies": {
-    "browser-sync": "^2.24.4",
-    "gulp": "^3.9.1",
-    "gulp-help": "^1.6.1",
-    "gulp-ruby-sass": "^3.0.0",
-    "gulp-sass": "^4.0.1",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "autoprefixer": "^8.6.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-minify": "^0.2.0",
     "breakpoint-sass": "^2.7.0",
+    "browser-sync": "^2.24.4",
+    "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "eslint": "^4.3.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "^1.1.0",
     "glob": "^7.0.3",
+    "globby": "^8.0.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.3.1",
+    "gulp-help": "^1.6.1",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-ruby-sass": "^3.0.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sass-glob": "^1.0.6",
     "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-spawn": "^0.4.0",
     "gulp-stylelint": "^4.0.0",
     "gulp-svg-sprite": "^1.3.1",
+    "import-glob-loader": "^1.1.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.17.4",
     "ngrok": "^2.2.2",
     "node-normalize-scss": "^3.0.0",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.9.0",
     "portscanner": "^2.1.1",
+    "postcss-loader": "^2.1.5",
     "pre-commit": "^1.2.2",
     "psi": "^3.0.0",
+    "sass-loader": "^7.0.3",
     "singularitygs": "^1.7.0",
+    "style-loader": "^0.21.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
     "webpagetest": "^0.3.4"
   },
   "scripts": {
+    "dev": "webpack --mode development --watch",
     "start": "gulp watch:css",
     "pl:start": "composer run start --timeout=0",
     "pl:install": "composer install",
