--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,8 @@
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
         "drupal/maxlength": "^1.0",
+        "drupal/openid_connect": "^1.0@beta",
+        "drupal/openid_connect_windows_aad": "^1.0",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
         "drupal/prepopulate": "^2.0",
