--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -82,6 +82,8 @@ module:
   node: 0
   openapi: 0
   openapi_redoc: 0
+  openid_connect: 0
+  openid_connect_windows_aad: 0
   options: 0
   page_cache: 0
   page_manager: 0
