POWR-239 Add a patch so the AAD plugin module can be enabled

--- a/composer.json
+++ b/composer.json
@@ -128,6 +128,9 @@
           "drupal/group": {
             "2774827 - node:group functionality for adding node:group:title":
               "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch"
+          },
+          "drupal/openid_connect_windows_aad": {
+              "Fix dependencies YAML error": "patches/openid_connect_windows_aad_dependecies_fix.patch"
           }
         },
         "merge-plugin": {
