POWR-238 exclude private/simplesamlphp-1.15.4/vendor from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,14 @@ web/sites/*/files
 web/sites/*/private
 files/*
 artifacts
-#vendor/
+vendor/
 web/core/
 web/libraries/
 web/modules/contrib/
 web/profiles/contrib/
 web/themes/contrib/
 web/vendor/
+!web/private/simplesaml*/vendor
 
 # Avoid accidental modification of pantheon.upstream.yml in sites
 # created from this upstream
