--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ web/sites/*/settings.local.php
 #   $settings['container_yamls'][] = __DIR__ . '/services.local.yml';
 web/sites/*/services.local.yml
 
+# Ignore configuration with secrets in it
+**/openid_connect.settings.*.yml
+
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
 web/sites/default/**/files
 web/sites/default/**/private
@@ -119,3 +122,4 @@ site.conf
 log.conf
 php.Dockerfile
 php.ini
+nginx.conf
