POWR-232 Created a new view block for group content.

--- a/web/sites/default/config/block.block.views_block__group_content_menu_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_content_menu_block_1.yml
@@ -1,15 +1,15 @@
-uuid: 5fd57746-1a9a-46fb-b09e-f69304f4fe33
+uuid: 9d1a997f-5c6d-4b70-97a4-d80e9cc99294
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.group_content_menu
   module:
-    - ctools
+    - system
     - views
   theme:
     - stormy
-id: stormy_views_block__group_content_menu
+id: views_block__group_content_menu_block_1
 theme: stormy
 region: sidebar_first
 weight: -4
@@ -24,13 +24,8 @@ settings:
   items_per_page: none
   context_mapping: {  }
 visibility:
-  'entity_bundle:group':
-    id: 'entity_bundle:group'
-    bundles:
-      elected_official: elected_official
-      bureau_office: bureau_office
-      program: program
-      project: project
+  request_path:
+    id: request_path
+    pages: '/node/*'
     negate: false
-    context_mapping:
-      group: '@group.group_route_context:group'
+    context_mapping: {  }
