--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -67,6 +67,14 @@ type_settings:
       from:
         - draft
         - published
+        - review
+    review:
+      label: Review
+      from:
+        - draft
+        - review
+      to: review
+      weight: 0
   entity_types:
     node:
       - alert
