POWR-161 Add a simple workflow and content type updates

--- a/web/sites/default/config/core.entity_view_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.default.yml
@@ -28,5 +28,6 @@ content:
     type: address_default
     region: content
 hidden:
+  content_moderation_control: true
   links: true
   scheduled_publication: true
