--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -52,6 +52,7 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_audience: true
   field_community_actions: true
   field_related_content: true
