--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -41,6 +41,7 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_related_content: true
   field_topics: true
   links: true
