--- a/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
@@ -32,6 +32,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_body: true
   field_related_content: true
   field_topics: true
