--- a/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
@@ -4,17 +4,24 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.information.field_body
     - node.type.information
   module:
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.information.teaser
 targetEntityType: node
 bundle: information
 mode: teaser
-content:
-  links:
-    weight: 100
-    region: content
+content: {  }
 hidden:
+  content_moderation_control: true
   field_body: true
+  links: true
   scheduled_publication: true
