--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -30,4 +30,5 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
 hidden:
+  content_moderation_control: true
   links: true
