--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -7,14 +7,20 @@ dependencies:
     - field.field.node.news.field_body
     - node.type.news
   module:
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.news.teaser
 targetEntityType: node
 bundle: news
 mode: teaser
-content:
-  links:
-    weight: 100
-    region: content
+content: {  }
 hidden:
+  content_moderation_control: true
   field_body: true
+  links: true
