--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -62,5 +62,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   links: true
   scheduled_publication: true
