--- a/web/sites/default/config/group.role.bureau_office-outsider.yml
+++ b/web/sites/default/config/group.role.bureau_office-outsider.yml
@@ -12,8 +12,8 @@ audience: outsider
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'view group_node:city_service entity'
-  2: 'view group_node:news entity'
-  3: 'view group_node:guide entity'
-  6: 'view group_node:information entity'
+  - 'view group'
+  - 'view group_node:city_service entity'
+  - 'view group_node:news entity'
+  - 'view group_node:guide entity'
+  - 'view group_node:information entity'
