--- a/web/sites/default/config/core.entity_view_display.node.building.address.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.address.yml
@@ -29,5 +29,6 @@ content:
     type: address_default
     region: content
 hidden:
+  content_moderation_control: true
   links: true
   scheduled_publication: true
