--- a/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
@@ -29,5 +29,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   links: true
   scheduled_publication: true
