--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -61,5 +61,6 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   links: true
   scheduled_publication: true
