--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -12,46 +12,46 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  0: 'edit group'
-  1: 'view group'
-  2: 'administer members'
-  3: 'update own group_membership content'
-  4: 'leave group'
-  5: 'view group_membership content'
-  6: 'access group_node overview'
-  7: 'create group_node:city_service entity'
-  8: 'delete any group_node:city_service entity'
-  9: 'delete own group_node:city_service entity'
-  10: 'update any group_node:city_service entity'
-  11: 'update own group_node:city_service entity'
-  12: 'view group_node:city_service entity'
-  13: 'view unpublished group_node:city_service entity'
-  14: 'create group_node:city_service content'
-  15: 'view group_node:city_service content'
-  16: 'create group_node:news entity'
-  17: 'delete any group_node:news entity'
-  18: 'delete own group_node:news entity'
-  19: 'update any group_node:news entity'
-  20: 'update own group_node:news entity'
-  21: 'view group_node:news entity'
-  22: 'view unpublished group_node:news entity'
-  23: 'create group_node:news content'
-  24: 'view group_node:news content'
-  25: 'create group_node:guide entity'
-  26: 'delete any group_node:guide entity'
-  27: 'delete own group_node:guide entity'
-  28: 'update any group_node:guide entity'
-  29: 'update own group_node:guide entity'
-  30: 'view group_node:guide entity'
-  31: 'view unpublished group_node:guide entity'
-  32: 'create group_node:guide content'
-  33: 'view group_node:guide content'
-  50: 'create group_node:information entity'
-  51: 'delete any group_node:information entity'
-  52: 'delete own group_node:information entity'
-  53: 'update any group_node:information entity'
-  54: 'update own group_node:information entity'
-  55: 'view group_node:information entity'
-  56: 'view unpublished group_node:information entity'
-  57: 'create group_node:information content'
-  58: 'view group_node:information content'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'create group_node:city_service content'
+  - 'view group_node:city_service content'
+  - 'create group_node:news entity'
+  - 'delete any group_node:news entity'
+  - 'delete own group_node:news entity'
+  - 'update any group_node:news entity'
+  - 'update own group_node:news entity'
+  - 'view group_node:news entity'
+  - 'view unpublished group_node:news entity'
+  - 'create group_node:news content'
+  - 'view group_node:news content'
+  - 'create group_node:guide entity'
+  - 'delete any group_node:guide entity'
+  - 'delete own group_node:guide entity'
+  - 'update any group_node:guide entity'
+  - 'update own group_node:guide entity'
+  - 'view group_node:guide entity'
+  - 'view unpublished group_node:guide entity'
+  - 'create group_node:guide content'
+  - 'view group_node:guide content'
+  - 'create group_node:information entity'
+  - 'delete any group_node:information entity'
+  - 'delete own group_node:information entity'
+  - 'update any group_node:information entity'
+  - 'update own group_node:information entity'
+  - 'view group_node:information entity'
+  - 'view unpublished group_node:information entity'
+  - 'create group_node:information content'
+  - 'view group_node:information content'
