--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -2,6 +2,13 @@ uuid: d3227574-01cb-4000-bfee-8530becbe516
 langcode: en
 status: true
 dependencies:
+  config:
+    - node.type.building
+    - node.type.city_service
+    - node.type.guide
+    - node.type.information
+    - node.type.news
+    - node.type.service_location
   module:
     - content_moderation
 _core:
@@ -73,4 +80,11 @@ type_settings:
         - review
       to: review
       weight: 0
-  entity_types: {  }
+  entity_types:
+    node:
+      - building
+      - city_service
+      - guide
+      - information
+      - news
+      - service_location
